# FreeFire1

./: CMakeLists.txt  emulator_bypass_research.md
.github/workflows/: build.yml
resources/: config.json
src/: main.cpp
src/game/: Aimbot.h  Game.h  Player.h
src/memory/: Memory.h  Offsets.h
src/patches/: PatchManager.h  PatchesData.h
src/ui/: Config.h  Glow.h  ImageLoader.h  Menu.h  Theme.h
src/utils/: EmulatorDetector.cpp  EmulatorDetector.h  Hotkeys.h  Logger.h
